<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_bag">

    <fragment
        android:id="@+id/navigation_bag"
        android:name="com.coen390team11.GSAAPP.ui.dashboard.BagFragment"
        android:label="@string/title_bag"
        tools:layout="@layout/fragment_bag" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.coen390team11.GSAAPP.ui.home.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.coen390team11.GSAAPP.ui.notifications.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>