<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightbluebackgroundlogin"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="192dp"
        android:layout_height="173dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/appicon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:alpha="1"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:alpha="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/black"></com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:ems="10"
        android:alpha="1"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:minHeight="48dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#808080">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/password"
            android:alpha="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:ems="10"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"
        android:text="@string/sign_up"
        android:textColor="#344398"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="460dp"
        android:text="@string/forgot_password"
        android:textColor="#344398"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/WelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="222dp"
        android:text="Welcome to Cartly"
        android:textSize="16sp" />


</RelativeLayout>