<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightbluebackgroundlogin"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="192dp"
        android:layout_height="173dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/appicon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#808080">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/first_name"
            android:ems="10"
            android:textColor="@color/black"
            android:textColorHint="@color/black"></com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#808080"
        android:textColor="@color/black"
        android:textColorHint="#808080">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="470dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#808080"
        android:textColor="@color/black"
        android:textColorHint="#808080">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/confirm_password"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:ems="10"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#808080">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@color/white"
            android:ems="10"></com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:minHeight="48dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:hint="@string/last_name"
            android:background="@color/white"
            android:ems="10"
            android:textColor="@color/black"
            android:textColorHint="@color/black"></com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="540dp"
        android:backgroundTint="#344398"
        android:text="@string/register"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="590dp"
        android:text="@string/already_have_an_account_login"
        android:textColor="#344398"
        android:textSize="17sp" />


</RelativeLayout>